--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <title>Pawtucket Brewery | Wyng Front-end Developer Assessment</title>
   </head>
   <body>
-    <div id="ageGate" class="active">
+    <div id="ageGate">
       <div class="logo">
         <img src="/images/logo.jpg" />
       </div>
@@ -53,5 +53,7 @@
         I am not of legal drinking age
       </a>
     </div>
+    <h2 class="body-title">Welcome to Pawtucket Brewery</h2>
+    <h3 class="subtitle">You are on the main site!</h3>
   </body>
 </html>
