--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="ageGate">
       <div class="container">
-        <div class="logo">
+        <div class="img-wrapper">
           <img src="./images/logo.jpg" />
         </div>
         <h1 class="header">Welcome to Pawtucket Brewery</h1>
